Tue Jul 29 12:11:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): Revert this change.  The
	main reason is procedural; Karl is not a current CVS developer.
	The other thing is that the new text doesn't say anything about
	HOMEDRIVE and HOMEPATH.

Tue Jul 29 11:36:22 1997  Karl Fogel  <kfogel@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): error message informs user
	she may need to set HOME environment variable by hand.

Sun Jul 27 15:36:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* admin.c (admin): Remove comment "XXX send -ko too with i = 0".
	It turns out to be a description of a bugfix which was applied on
	8 Oct 1995, and never should have been in a comment in the first
	place.

	* admin.c (admin, admin_fileproc): Parse options ourself rather
	than blindly passing them to RCS.
	Accordingly, add struct admin_data and function arg_add, and delete
	global variables ac and av.
	* sanity.sh (admin): Change admin-3 test to reflect cvs admin -i
	now being an error.
	(basicb): Change basicb-21 test to relect the improved error
	message here.

Sat Jul 26 11:34:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join3): New tests, test a new branch topology and
	greatest common ancestor.

Fri Jul 25 09:51:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_directory): Repository must start with
	CVSroot_directory rather than some random pathname.

	* remove.c (remove_fileproc): If there is a numeric sticky tag,
	don't allow the remove.
	* commit.c (check_fileproc): Add comment about this case.
	* sanity.sh (sticky): New tests sticky-15 through sticky-23
	test for this behavior and the analogous behavior with
	non-branch sticky tags (which is unchanged).

	* client.c (update_entries): Clear the stored mode, modtime, and
	checksum even on an error.
	* sanity.sh (contents2-142d*): Also test cvs status.  Also test
	the case in which the contents of the file are unchanged.  Also